"""Client for Defect Analyzer agent."""

import grpc
from typing import Any, Dict, List, Optional
from ecommerce_agent.config import get_settings
from ecommerce_agent.utils.logging import get_logger

logger = get_logger(__name__)

class DefectAnalyzerClient:
    """Client for communicating with Defect Analyzer agent."""

    def __init__(self):
        config = get_settings()
        # Defect Analyzer would run on a different port
        self.host = config.defect_analyzer_host if hasattr(config, 'defect_analyzer_host') else "localhost"
        self.port = config.defect_analyzer_port if hasattr(config, 'defect_analyzer_port') else 9094

    async def analyze_defects(self, request: Dict[str, Any]) -> Dict[str, Any]:
        """
        Analyze and predict defects via Defect Analyzer agent.

        Args:
            request: Defect analysis request

        Returns:
            Defect predictions and analysis
        """
        # For now, return simulated response
        # In production, this would make actual gRPC call
        logger.info(
            "Analyzing defects (simulated)",
            entity=request.get("entity"),
            workflow=request.get("workflow"),
            method=request.get("generation_method")
        )

        entity = request.get("entity")
        business_rules = request.get("domain_context", {}).get("business_rules", [])
        edge_cases = request.get("domain_context", {}).get("edge_cases", [])

        # Simulate defect predictions
        predictions = []

        # Generate predictions based on business rules
        for idx, rule in enumerate(business_rules[:3]):
            prediction = {
                "id": f"DEF-{entity.upper()}-{idx+1:04d}",
                "category": "business_logic" if "must" in rule.lower() else "functional",
                "severity": "high" if idx == 0 else "medium",
                "probability": 0.7 - (idx * 0.1),
                "description": f"Potential violation of business rule: {rule}",
                "potential_cause": "Incomplete validation logic or missing edge case handling",
                "impact": "Could lead to data inconsistency or business rule violations",
                "prevention_strategy": "Add comprehensive validation and unit tests",
                "detection_method": "Automated business rule testing",
                "affected_components": [entity, "validation_service"],
                "related_business_rules": [rule],
                "estimated_fix_effort": f"{2 + idx} hours"
            }
            predictions.append(prediction)

        # Add edge case predictions
        for idx, edge_case in enumerate(edge_cases[:2]):
            prediction = {
                "id": f"DEF-EDGE-{entity.upper()}-{idx+1:04d}",
                "category": "functional",
                "severity": "medium",
                "probability": 0.5,
                "description": f"Edge case not handled: {edge_case}",
                "potential_cause": "Missing edge case implementation",
                "impact": "System may behave unexpectedly in edge scenarios",
                "prevention_strategy": "Implement edge case handling with proper error recovery",
                "detection_method": "Edge case testing and monitoring",
                "affected_components": [entity],
                "related_business_rules": [],
                "estimated_fix_effort": "3 hours"
            }
            predictions.append(prediction)

        # Calculate risk score
        total_risk = sum(p["probability"] * (4 if p["severity"] == "critical" else 3 if p["severity"] == "high" else 2 if p["severity"] == "medium" else 1) for p in predictions)
        max_risk = len(predictions) * 4
        risk_score = (total_risk / max_risk) if max_risk > 0 else 0

        return {
            "predictions": predictions,
            "risk_score": risk_score,
            "recommendations": [
                f"Focus testing on {entity} business rules validation",
                "Implement comprehensive edge case testing",
                "Add monitoring for business rule violations in production",
                f"Prioritize fixing high-severity defects in {entity} workflow"
            ],
            "mitigation_plan": {
                "immediate": ["Fix critical business rule validations", "Add input validation"],
                "short_term": ["Implement edge case handling", "Add unit tests"],
                "long_term": ["Refactor validation architecture", "Add automated testing"]
            },
            "test_focus_areas": [
                f"{entity} business rules compliance",
                "Edge case scenarios",
                "Data validation boundaries",
                "Integration points"
            ]
        }

    async def get_historical_defects(
        self,
        entity: str,
        time_period: str = "30d"
    ) -> List[Dict[str, Any]]:
        """
        Get historical defect data.

        Args:
            entity: Entity name
            time_period: Time period for analysis

        Returns:
            List of historical defects
        """
        # Simulated historical data
        return [
            {
                "defect_id": f"HIST-001",
                "entity": entity,
                "date": "2024-01-10",
                "severity": "high",
                "category": "functional",
                "resolution_time": "2 days"
            },
            {
                "defect_id": f"HIST-002",
                "entity": entity,
                "date": "2024-01-05",
                "severity": "medium",
                "category": "performance",
                "resolution_time": "1 day"
            }
        ]

    async def health_check(self) -> bool:
        """Check if Defect Analyzer agent is healthy."""
        try:
            # In production, make actual health check call
            return True
        except Exception as e:
            logger.error(
                "Defect Analyzer health check failed",
                error=str(e)
            )
            return False