import grpc
from concurrent import futures
from typing import Any

from ecommerce_agent.proto import ecommerce_domain_pb2 as pb2
from ecommerce_agent.proto import ecommerce_domain_pb2_grpc as pb2_grpc
from ecommerce_agent.utils.logging import get_logger, bind_context

logger = get_logger(__name__)


class EcommerceDomainServicer(pb2_grpc.EcommerceDomainServiceServicer):
    """gRPC service implementation for eCommerce Domain Agent."""

    def __init__(self):
        """Initialize the servicer with dependencies."""
        # Dependencies will be injected later
        pass

    async def GetDomainContext(
        self,
        request: pb2.DomainContextRequest,
        context: grpc.aio.ServicerContext,
    ) -> pb2.DomainContextResponse:
        """Get domain context for test generation."""
        bind_context(request_id=request.request_id, method="GetDomainContext")
        logger.info("Getting domain context", entity=request.entity, workflow=request.workflow)

        # TODO: Implement
        return pb2.DomainContextResponse(
            request_id=request.request_id,
            context="Domain context placeholder",
        )

    async def QueryKnowledge(
        self,
        request: pb2.KnowledgeRequest,
        context: grpc.aio.ServicerContext,
    ) -> pb2.KnowledgeResponse:
        """Query domain knowledge."""
        bind_context(request_id=request.request_id, method="QueryKnowledge")
        logger.info("Querying knowledge", query=request.query)

        # TODO: Implement
        return pb2.KnowledgeResponse(
            request_id=request.request_id,
            items=[],
            summary="Knowledge query placeholder",
        )

    async def GetEntity(
        self,
        request: pb2.EntityRequest,
        context: grpc.aio.ServicerContext,
    ) -> pb2.EntityResponse:
        """Get entity details."""
        logger.info("Getting entity", entity=request.entity_name)

        # TODO: Implement
        return pb2.EntityResponse(
            entity=pb2.Entity(
                name=request.entity_name,
                description="Entity placeholder",
            )
        )

    async def GetWorkflow(
        self,
        request: pb2.WorkflowRequest,
        context: grpc.aio.ServicerContext,
    ) -> pb2.WorkflowResponse:
        """Get workflow details."""
        logger.info("Getting workflow", workflow=request.workflow_name)

        # TODO: Implement
        return pb2.WorkflowResponse(
            workflow=pb2.Workflow(
                name=request.workflow_name,
                description="Workflow placeholder",
            )
        )

    async def ListEntities(
        self,
        request: pb2.ListEntitiesRequest,
        context: grpc.aio.ServicerContext,
    ) -> pb2.ListEntitiesResponse:
        """List all entities."""
        logger.info("Listing entities", category=request.category)

        # TODO: Implement
        return pb2.ListEntitiesResponse(entities=[])

    async def ListWorkflows(
        self,
        request: pb2.ListWorkflowsRequest,
        context: grpc.aio.ServicerContext,
    ) -> pb2.ListWorkflowsResponse:
        """List all workflows."""
        logger.info("Listing workflows")

        # TODO: Implement
        return pb2.ListWorkflowsResponse(workflows=[])

    async def GetEdgeCases(
        self,
        request: pb2.EdgeCasesRequest,
        context: grpc.aio.ServicerContext,
    ) -> pb2.EdgeCasesResponse:
        """Get edge cases."""
        logger.info("Getting edge cases", entity=request.entity, workflow=request.workflow)

        # TODO: Implement
        return pb2.EdgeCasesResponse(edge_cases=[])

    async def GenerateTestData(
        self,
        request: pb2.GenerateTestDataRequest,
        context: grpc.aio.ServicerContext,
    ) -> pb2.GenerateTestDataResponse:
        """Generate test data via Test Data Agent."""
        bind_context(request_id=request.request_id, method="GenerateTestData")
        logger.info("Generating test data", entity=request.entity, count=request.count)

        # TODO: Implement with Test Data Agent client
        return pb2.GenerateTestDataResponse(
            request_id=request.request_id,
            success=False,
            error="Not implemented yet",
        )

    async def HealthCheck(
        self,
        request: pb2.HealthCheckRequest,
        context: grpc.aio.ServicerContext,
    ) -> pb2.HealthCheckResponse:
        """Health check."""
        return pb2.HealthCheckResponse(
            status="healthy",
            components={"grpc": "healthy"},
        )


async def create_server(port: int) -> grpc.aio.Server:
    """Create and configure the gRPC server."""
    server = grpc.aio.server(
        futures.ThreadPoolExecutor(max_workers=10),
        options=[
            ("grpc.max_receive_message_length", 50 * 1024 * 1024),  # 50MB
            ("grpc.max_send_message_length", 50 * 1024 * 1024),
        ],
    )

    servicer = EcommerceDomainServicer()
    pb2_grpc.add_EcommerceDomainServiceServicer_to_server(servicer, server)

    server.add_insecure_port(f"[::]:{port}")

    logger.info("gRPC server created", port=port)
    return server